start of minor updates

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> ### There are 10,181 unique words in the model."
+    "> ### There are 479 unique words in the model. This is quite small. However, spaCy offers other, larger models too."
    ]
   },
   {
@@ -157,15 +157,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 19.8 s, sys: 5.17 s, total: 24.9 s\n",
-      "Wall time: 24.9 s\n"
+     "ename": "NameError",
+     "evalue": "name 'nlp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'nlp' is not defined"
      ]
     }
    ],
@@ -179,22 +182,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[Records Support Claims,\n",
-       " That Minnesota Muslima State Rep Ilhan Omar Married Her Brother\n",
-       " \n",
-       " Ilhan Omar has accused Israel of “evil doings” in Gaza and called Israel an “apartheid state.”,\n",
-       " It isn’t surprising that Ilhan Omar would think this way.]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'docs_as_sents' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-bc407df1107c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdocs_as_sents\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'docs_as_sents' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1029,7 +1029,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> ### <span style=\"color:#8800FF\"> Approximately four out of every ten sentences contains an instance of propaganda. In terms of the training data being representative of an \"average online news article\" this strikes me as far too high. I would expect something more like 0.25 (or fewer) out of every ten sentences containing propaganda however, I have no justification for that number. It's possible that propaganda is more common than I am inclined to think.   \n",
+    "> ### <span style=\"color:#8800FF\"> Approximately four out of every ten sentences contains an instance of propaganda. In terms of the training data being representative of an \"average online news article\" this strikes me as far too high. I would expect something more like 25 (or fewer) out of every thousand sentences containing propaganda however, I have no justification for that number. It's possible that propaganda is more common than I am inclined to think.   \n",
     "> ### <span style=\"color:#8800FF\"> If we wanted to generalize any classifiers to random news articles it's possible that the classifiers would predict *some* propaganda label more frequently than they should resulting in a higher number of false positives simply due to the training data. However, one clear benefit of this approach, as opposed to collecting new negative samples on our own, is that we can be highly confident that the negative samples are truly negative samples. If we collected our own news articles at random we'd likely have some instances of actual propaganda labeled as \"No_Propaganda\"."
    ]
   },
