--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -86,60 +86,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "478"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nlp.vocab.length"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> ### There are 479 unique words in the model. This is quite small. However, spaCy offers other, larger models too."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'en'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nlp.vocab.lang"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> ### Verifying the model is in English."
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
@@ -157,18 +103,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'nlp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'nlp' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 23.5 s, sys: 5.6 s, total: 29.1 s\n",
+      "Wall time: 29.2 s\n"
      ]
     }
    ],
@@ -182,19 +125,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'docs_as_sents' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-bc407df1107c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdocs_as_sents\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'docs_as_sents' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[Records Support Claims,\n",
+       " That Minnesota Muslima State Rep Ilhan Omar Married Her Brother\n",
+       " \n",
+       " Ilhan Omar has accused Israel of “evil doings” in Gaza and called Israel an “apartheid state.”,\n",
+       " It isn’t surprising that Ilhan Omar would think this way.]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -378,8 +324,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 18 s, sys: 5.01 s, total: 23 s\n",
-      "Wall time: 23 s\n"
+      "CPU times: user 20.6 s, sys: 5.62 s, total: 26.2 s\n",
+      "Wall time: 26.2 s\n"
      ]
     }
    ],
@@ -627,34 +573,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5789</th>\n",
-       "      <td>999000312</td>\n",
-       "      <td>Name_Calling,Labeling</td>\n",
-       "      <td>771</td>\n",
-       "      <td>779</td>\n",
-       "      <td>8</td>\n",
-       "      <td>article999000312.txt</td>\n",
-       "      <td>166</td>\n",
+       "      <th>5074</th>\n",
+       "      <td>787529309</td>\n",
+       "      <td>Loaded_Language</td>\n",
+       "      <td>8567</td>\n",
+       "      <td>8585</td>\n",
+       "      <td>18</td>\n",
+       "      <td>article787529309.txt</td>\n",
+       "      <td>214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4318</th>\n",
-       "      <td>780414700</td>\n",
-       "      <td>Slogans</td>\n",
-       "      <td>18812</td>\n",
-       "      <td>18834</td>\n",
-       "      <td>22</td>\n",
-       "      <td>article780414700.txt</td>\n",
-       "      <td>85</td>\n",
+       "      <th>271</th>\n",
+       "      <td>697454736</td>\n",
+       "      <td>Loaded_Language</td>\n",
+       "      <td>11963</td>\n",
+       "      <td>12026</td>\n",
+       "      <td>63</td>\n",
+       "      <td>article697454736.txt</td>\n",
+       "      <td>281</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1791</th>\n",
-       "      <td>730389374</td>\n",
+       "      <th>3994</th>\n",
+       "      <td>776368676</td>\n",
        "      <td>Name_Calling,Labeling</td>\n",
-       "      <td>2955</td>\n",
-       "      <td>2970</td>\n",
-       "      <td>15</td>\n",
-       "      <td>article730389374.txt</td>\n",
-       "      <td>135</td>\n",
+       "      <td>2164</td>\n",
+       "      <td>2174</td>\n",
+       "      <td>10</td>\n",
+       "      <td>article776368676.txt</td>\n",
+       "      <td>294</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -662,14 +608,14 @@
       ],
       "text/plain": [
        "      filenumber                  label  span_start  span_end  span_len  \\\n",
-       "5789   999000312  Name_Calling,Labeling         771       779         8   \n",
-       "4318   780414700                Slogans       18812     18834        22   \n",
-       "1791   730389374  Name_Calling,Labeling        2955      2970        15   \n",
+       "5074   787529309        Loaded_Language        8567      8585        18   \n",
+       "271    697454736        Loaded_Language       11963     12026        63   \n",
+       "3994   776368676  Name_Calling,Labeling        2164      2174        10   \n",
        "\n",
        "                  filename  element_in_list  \n",
-       "5789  article999000312.txt              166  \n",
-       "4318  article780414700.txt               85  \n",
-       "1791  article730389374.txt              135  "
+       "5074  article787529309.txt              214  \n",
+       "271   article697454736.txt              281  \n",
+       "3994  article776368676.txt              294  "
       ]
      },
      "execution_count": 27,
@@ -804,8 +750,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.22 s, sys: 3.76 ms, total: 4.23 s\n",
-      "Wall time: 4.22 s\n"
+      "CPU times: user 5.17 s, sys: 0 ns, total: 5.17 s\n",
+      "Wall time: 5.18 s\n"
      ]
     }
    ],
