start new training attempt

--- a/generate_data.ipynb
+++ b/generate_data.ipynb
@@ -77,6 +77,26 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "371"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from spacy.tokens import Doc, Token, Span\n",
@@ -85,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +172,7 @@
        "(6129, 6)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -285,20 +305,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3095</th>\n",
-       "      <td>\\nDemocratic Illinois Rep. Danny Davis defende...</td>\n",
+       "      <th>1167</th>\n",
+       "      <td>nations grapple with the outbreak of the bubon...</td>\n",
        "      <td>No_Propaganda</td>\n",
        "      <td>No_Propaganda</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8700</th>\n",
-       "      <td>who accused Bill Clinton of rape — and who’s n...</td>\n",
-       "      <td>No_Propaganda</td>\n",
-       "      <td>No_Propaganda</td>\n",
+       "      <th>13237</th>\n",
+       "      <td>Of course they did, and of course they still do</td>\n",
+       "      <td>Loaded_Language</td>\n",
+       "      <td>Propaganda</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3861</th>\n",
-       "      <td>\\n\\nNewsCatholic Church\\nSALZBURG, Austria, Fe...</td>\n",
+       "      <th>882</th>\n",
+       "      <td>now, we have all heard of Jesus Campos.\\nHe’s ...</td>\n",
        "      <td>No_Propaganda</td>\n",
        "      <td>No_Propaganda</td>\n",
        "    </tr>\n",
@@ -307,18 +327,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                   text          label  \\\n",
-       "3095  \\nDemocratic Illinois Rep. Danny Davis defende...  No_Propaganda   \n",
-       "8700  who accused Bill Clinton of rape — and who’s n...  No_Propaganda   \n",
-       "3861  \\n\\nNewsCatholic Church\\nSALZBURG, Austria, Fe...  No_Propaganda   \n",
+       "                                                    text            label  \\\n",
+       "1167   nations grapple with the outbreak of the bubon...    No_Propaganda   \n",
+       "13237    Of course they did, and of course they still do  Loaded_Language   \n",
+       "882    now, we have all heard of Jesus Campos.\\nHe’s ...    No_Propaganda   \n",
        "\n",
-       "       label_binary  \n",
-       "3095  No_Propaganda  \n",
-       "8700  No_Propaganda  \n",
-       "3861  No_Propaganda  "
+       "        label_binary  \n",
+       "1167   No_Propaganda  \n",
+       "13237     Propaganda  \n",
+       "882    No_Propaganda  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +370,7 @@
        "(15928, 4)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,6 +438,26 @@
     "    with open(PATH+name) as f:\n",
     "        text = f.read()\n",
     "        texts.append(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counter"
    ]
   },
   {
