--- a/generate_data.ipynb
+++ b/generate_data.ipynb
@@ -305,20 +305,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1167</th>\n",
-       "      <td>nations grapple with the outbreak of the bubon...</td>\n",
+       "      <th>7838</th>\n",
+       "      <td>the point about the McCarrick scandal that eve...</td>\n",
        "      <td>No_Propaganda</td>\n",
        "      <td>No_Propaganda</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13237</th>\n",
-       "      <td>Of course they did, and of course they still do</td>\n",
-       "      <td>Loaded_Language</td>\n",
-       "      <td>Propaganda</td>\n",
+       "      <th>4692</th>\n",
+       "      <td>political-militant organization that advocates...</td>\n",
+       "      <td>No_Propaganda</td>\n",
+       "      <td>No_Propaganda</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>882</th>\n",
-       "      <td>now, we have all heard of Jesus Campos.\\nHe’s ...</td>\n",
+       "      <th>3306</th>\n",
+       "      <td>IX ordered Cardinal Rigoli to publish the Inst...</td>\n",
        "      <td>No_Propaganda</td>\n",
        "      <td>No_Propaganda</td>\n",
        "    </tr>\n",
@@ -327,15 +327,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                    text            label  \\\n",
-       "1167   nations grapple with the outbreak of the bubon...    No_Propaganda   \n",
-       "13237    Of course they did, and of course they still do  Loaded_Language   \n",
-       "882    now, we have all heard of Jesus Campos.\\nHe’s ...    No_Propaganda   \n",
+       "                                                   text          label  \\\n",
+       "7838  the point about the McCarrick scandal that eve...  No_Propaganda   \n",
+       "4692  political-militant organization that advocates...  No_Propaganda   \n",
+       "3306  IX ordered Cardinal Rigoli to publish the Inst...  No_Propaganda   \n",
        "\n",
-       "        label_binary  \n",
-       "1167   No_Propaganda  \n",
-       "13237     Propaganda  \n",
-       "882    No_Propaganda  "
+       "       label_binary  \n",
+       "7838  No_Propaganda  \n",
+       "4692  No_Propaganda  \n",
+       "3306  No_Propaganda  "
       ]
      },
      "execution_count": 21,
@@ -353,8 +353,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df[\"rand_letter\"] = \"s\" # apparently this is needed/expected by BERT\n",
-    "train_data = train_df[[\"label\",\"label_binary\",\"rand_letter\",\"text\"]]\n",
+    "# train_df[\"rand_letter\"] = \"s\" # unnecessary\n",
+    "# train_data = train_df[[\"label\",\"label_binary\",\"rand_letter\",\"text\"]]\n",
+    "train_data = train_df[[\"label\",\"label_binary\",\"text\"]]\n",
     "train_data.index = train_data.index.rename(\"id\")\n",
     "train_data = train_data.sample(frac = 1).reset_index(drop = True) #randomly sorts the rows"
    ]
@@ -367,7 +368,7 @@
     {
      "data": {
       "text/plain": [
-       "(15928, 4)"
+       "(15928, 3)"
       ]
      },
      "execution_count": 23,
@@ -388,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +452,7 @@
        "75"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +539,7 @@
        "(1063, 6)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -670,20 +671,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1397</th>\n",
-       "      <td>report explaining the prosecution or declinati...</td>\n",
+       "      <th>1372</th>\n",
+       "      <td>is not, These tactics are complemented by a la...</td>\n",
        "      <td>No_Propaganda</td>\n",
        "      <td>No_Propaganda</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>172</th>\n",
-       "      <td>Agency.\\nPaul told CNN’s “State of the Union” ...</td>\n",
+       "      <th>1043</th>\n",
+       "      <td>to be attorney general in Minnesota, even thou...</td>\n",
        "      <td>No_Propaganda</td>\n",
        "      <td>No_Propaganda</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1040</th>\n",
-       "      <td>does all of this while he stands accused of ab...</td>\n",
+       "      <th>1551</th>\n",
+       "      <td>to give up the microphone after several reques...</td>\n",
        "      <td>No_Propaganda</td>\n",
        "      <td>No_Propaganda</td>\n",
        "    </tr>\n",
@@ -693,17 +694,17 @@
       ],
       "text/plain": [
        "                                                   text          label  \\\n",
-       "1397  report explaining the prosecution or declinati...  No_Propaganda   \n",
-       "172   Agency.\\nPaul told CNN’s “State of the Union” ...  No_Propaganda   \n",
-       "1040  does all of this while he stands accused of ab...  No_Propaganda   \n",
+       "1372  is not, These tactics are complemented by a la...  No_Propaganda   \n",
+       "1043  to be attorney general in Minnesota, even thou...  No_Propaganda   \n",
+       "1551  to give up the microphone after several reques...  No_Propaganda   \n",
        "\n",
        "       label_binary  \n",
-       "1397  No_Propaganda  \n",
-       "172   No_Propaganda  \n",
-       "1040  No_Propaganda  "
+       "1372  No_Propaganda  \n",
+       "1043  No_Propaganda  \n",
+       "1551  No_Propaganda  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,28 +715,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dev_df[\"rand_letter\"] = \"s\"\n",
-    "dev_data = dev_df[[\"label\",\"label_binary\",\"rand_letter\",\"text\"]]\n",
+    "# dev_df[\"rand_letter\"] = \"s\" # unnecessary\n",
+    "# dev_data = dev_df[[\"label\",\"label_binary\",\"rand_letter\",\"text\"]]\n",
+    "dev_data = dev_df[[\"label\",\"label_binary\",\"text\"]]\n",
     "dev_data.index = dev_data.index.rename(\"id\")\n",
     "dev_data = dev_data.sample(frac = 1).reset_index(drop = True) # randomly sorts the rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2850, 4)"
+       "(2850, 3)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,11 +755,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "dev_data.to_csv(\"datasets/dev_data.tsv\", sep = \"\\t\", header = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <span style=\"color:#FF8800\">  Generate test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH = \"datasets/test-articles/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filenames = []\n",
+    "for root, dirs, files in os.walk(PATH, topdown = True):\n",
+    "    filenames = files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texts = [] #create a single string for each doc & add to list\n",
+    "text_to_num = []\n",
+    "counter = 0\n",
+    "for name in filenames:\n",
+    "    text_to_num.append((counter,name))\n",
+    "    counter += 1\n",
+    "    with open(PATH+name) as f:\n",
+    "        text = f.read()\n",
+    "        texts.append(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from spacy.tokens import Doc, Token, Span\n",
+    "Span.set_extension(\"TEST_LABEL\", default = \"No_Label\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs_as_docs = []\n",
+    "for doc in nlp.pipe(texts):\n",
+    "    docs_as_docs.append(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_num_name_df = pd.DataFrame(text_to_num, columns = [\"element_in_list\", \"filename\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_num_name_df[\"filenumber\"] = file_num_name_df.apply(lambda x: int(re.findall(\"\\d+\", x[\"filename\"])[0]), axis = 1)\n",
+    "file_num_name_df = file_num_name_df[[\"filenumber\",\"filename\",\"element_in_list\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TEST_LABELS = \"datasets/test-task-TC-template.out\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_spans_df = pd.read_csv(TEST_LABELS, sep = \"\\t\", header = None, names = [\"filenumber\",\"label\",\"span_start\",\"span_end\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_spans_df = all_spans_df.merge(file_num_name_df, on = \"filenumber\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1790, 6)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_spans_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_list = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in all_spans_df.iterrows():\n",
+    "    try:\n",
+    "        full_list.append((docs_as_docs[i[1][\"element_in_list\"]].char_span(i[1][\"span_start\"],i[1][\"span_end\"]).text, \"\")) # only label provided here is a question mark, we don't need labels here\n",
+    "    except Exception as e:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = pd.DataFrame.from_records(full_list, columns = ['text','label'])\n",
+    "test_data.index = test_data.index.rename(\"id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data.to_csv(\"datasets/test_data.tsv\", sep = \"\\t\", header = True)"
    ]
   },
   {
