generate test predictions for semeval

--- a/generate_data.ipynb
+++ b/generate_data.ipynb
@@ -17,7 +17,17 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
+    "import re\n",
     "import spacy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.load(\"en_core_web_sm\", disable = [\"ner\"]) # don't need NER, can disable"
    ]
   },
   {
@@ -29,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,22 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "filenames = []\n",
     "for root, dirs, files in os.walk(PATH, topdown = True):\n",
     "    filenames = files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nlp = spacy.load(\"en_core_web_sm\", disable = [\"ner\"]) # don't need NER, can disable"
    ]
   },
   {
@@ -129,7 +130,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re"
+    "file_num_name_df[\"filenumber\"] = file_num_name_df.apply(lambda x: int(re.findall(\"\\d+\", x[\"filename\"])[0]), axis = 1)\n",
+    "file_num_name_df = file_num_name_df[[\"filenumber\",\"filename\",\"element_in_list\"]]"
    ]
   },
   {
@@ -138,22 +140,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_num_name_df[\"filenumber\"] = file_num_name_df.apply(lambda x: int(re.findall(\"\\d+\", x[\"filename\"])[0]), axis = 1)\n",
-    "file_num_name_df = file_num_name_df[[\"filenumber\",\"filename\",\"element_in_list\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "TRAIN_LABELS = \"/home/bryan/Documents/Code/si630/semeval/datasets/train-task2-TC.labels\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +164,7 @@
        "(6129, 6)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -305,40 +297,40 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7838</th>\n",
-       "      <td>the point about the McCarrick scandal that eve...</td>\n",
+       "      <th>19</th>\n",
+       "      <td>\\n\\nGarcia Zarate, a 45-year-old Mexican natio...</td>\n",
        "      <td>No_Propaganda</td>\n",
        "      <td>No_Propaganda</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4692</th>\n",
-       "      <td>political-militant organization that advocates...</td>\n",
+       "      <th>4662</th>\n",
+       "      <td>era nuclear deal and the re-imposition of toug...</td>\n",
        "      <td>No_Propaganda</td>\n",
        "      <td>No_Propaganda</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3306</th>\n",
-       "      <td>IX ordered Cardinal Rigoli to publish the Inst...</td>\n",
-       "      <td>No_Propaganda</td>\n",
-       "      <td>No_Propaganda</td>\n",
+       "      <th>10236</th>\n",
+       "      <td>If we rely on the Kurds in Syria, we lose NATO...</td>\n",
+       "      <td>Black-and-White_Fallacy</td>\n",
+       "      <td>Propaganda</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                   text          label  \\\n",
-       "7838  the point about the McCarrick scandal that eve...  No_Propaganda   \n",
-       "4692  political-militant organization that advocates...  No_Propaganda   \n",
-       "3306  IX ordered Cardinal Rigoli to publish the Inst...  No_Propaganda   \n",
+       "                                                    text  \\\n",
+       "19     \\n\\nGarcia Zarate, a 45-year-old Mexican natio...   \n",
+       "4662   era nuclear deal and the re-imposition of toug...   \n",
+       "10236  If we rely on the Kurds in Syria, we lose NATO...   \n",
        "\n",
-       "       label_binary  \n",
-       "7838  No_Propaganda  \n",
-       "4692  No_Propaganda  \n",
-       "3306  No_Propaganda  "
+       "                         label   label_binary  \n",
+       "19               No_Propaganda  No_Propaganda  \n",
+       "4662             No_Propaganda  No_Propaganda  \n",
+       "10236  Black-and-White_Fallacy     Propaganda  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +363,7 @@
        "(15928, 3)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +444,7 @@
        "75"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +531,7 @@
        "(1063, 6)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -671,20 +663,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1372</th>\n",
-       "      <td>is not, These tactics are complemented by a la...</td>\n",
+       "      <th>1060</th>\n",
+       "      <td>ambassador to the U.N.?\\nWho should replace Ni...</td>\n",
        "      <td>No_Propaganda</td>\n",
        "      <td>No_Propaganda</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1043</th>\n",
-       "      <td>to be attorney general in Minnesota, even thou...</td>\n",
+       "      <th>1341</th>\n",
+       "      <td>among others, became targets a long time ago.\\...</td>\n",
        "      <td>No_Propaganda</td>\n",
        "      <td>No_Propaganda</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1551</th>\n",
-       "      <td>to give up the microphone after several reques...</td>\n",
+       "      <th>1388</th>\n",
+       "      <td>submitted a report to Attorney General William...</td>\n",
        "      <td>No_Propaganda</td>\n",
        "      <td>No_Propaganda</td>\n",
        "    </tr>\n",
@@ -694,17 +686,17 @@
       ],
       "text/plain": [
        "                                                   text          label  \\\n",
-       "1372  is not, These tactics are complemented by a la...  No_Propaganda   \n",
-       "1043  to be attorney general in Minnesota, even thou...  No_Propaganda   \n",
-       "1551  to give up the microphone after several reques...  No_Propaganda   \n",
+       "1060  ambassador to the U.N.?\\nWho should replace Ni...  No_Propaganda   \n",
+       "1341  among others, became targets a long time ago.\\...  No_Propaganda   \n",
+       "1388  submitted a report to Attorney General William...  No_Propaganda   \n",
        "\n",
        "       label_binary  \n",
-       "1372  No_Propaganda  \n",
-       "1043  No_Propaganda  \n",
-       "1551  No_Propaganda  "
+       "1060  No_Propaganda  \n",
+       "1341  No_Propaganda  \n",
+       "1388  No_Propaganda  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +729,7 @@
        "(2850, 3)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +809,7 @@
        "90"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +896,7 @@
        "(1790, 6)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,30 +916,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in all_spans_df.iterrows():\n",
     "    try:\n",
-    "        full_list.append((docs_as_docs[i[1][\"element_in_list\"]].char_span(i[1][\"span_start\"],i[1][\"span_end\"]).text, \"\")) # only label provided here is a question mark, we don't need labels here\n",
+    "        full_list.append((i[1]['filenumber'],i[1]['span_start'],i[1]['span_end'],docs_as_docs[i[1][\"element_in_list\"]].char_span(i[1][\"span_start\"],i[1][\"span_end\"]).text, \"\")) # only label provided here is a question mark, we don't need labels here\n",
     "    except Exception as e:\n",
     "        pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = pd.DataFrame.from_records(full_list, columns = ['text','label'])\n",
+    "test_data = pd.DataFrame.from_records(full_list, columns = ['filenumber','span_start','span_end','text','predicted_label'])\n",
     "test_data.index = test_data.index.rename(\"id\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
